# yieldfsm-riscv

./: .gitignore  LICENSE  README.md  Setup.hs  index.md  stack.yaml  yieldfsm-riscv.cabal
.github/workflows/: benchmark.yml  test.yml
dev/bench/fmax/: data.js
dev/bench/lc/: data.js
src/FSM/: RiscV.hs
src/FSM/RiscV/: Alu.hs  Arch.hs  ExampleTop.hs  Explicit.hs  ExplicitControl.hs  ExplicitData.hs  Immediate.hs  RegFile.hs  Wishbone.hs  YieldControl.hs  YieldCtlData.hs  YieldCtlDataManual.hs  YieldCtlDataManualOpt.hs
synth/: .gitignore  Makefile  common.mk  extract_perf.pl
synth/yieldfsm/: Makefile
synth/yieldfsm_manual/: Makefile
testbench/: .gitignore  Makefile  common.mk  main.cpp  toplevel.v
testbench/explicit/: Makefile
testbench/explicitdp/: Makefile
testbench/yieldfsm_manualopt/: Makefile
